Dworczyk, Nowak, images

--- a/index.html
+++ b/index.html
@@ -12,40 +12,48 @@
   </head>
   <body>
     <div class="container p-5">
-      <div class="container-fluid bg-light ">
+      <div class="container-fluid">
         <h1>Ile za Turów?</h1>
 
-        <ul class="list-inline justify-content-center d-flex">
-          <li class="list-inline-item">
-            <i class="bi bi-currency-euro"></i></li>
-          <li class="list-inline-item">
-            <h3 class="d-flex justify-content-center py-2"><span id="euro"></span> &nbsp;euro</h3>
-          </li>
+<ul class="list-group list-group-flush fs-5 fw-bolder">
+  <li class="list-group-item">
+     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
+    <span id="euro"></span> &nbsp;EURO
+  </li>
+  <li class="list-group-item">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
+    <span id="zloty"></span>&nbsp;PLN
+  </li>
 
-        </ul>
+  <li class="list-group-item">
+  <img src="media/clown.svg" alt="clown" height="30" class="mx-2">
+  <span id="sasin"></span>&nbsp;$a$inów
+  </li>
 
-        <ul class="list-inline justify-content-center d-flex">
-          <li class="list-inline-item">
-            <i class="bi bi-currency-euro"></i></li>
-          <li class="list-inline-item">
-            <h3 class="d-flex justify-content-center py-2"><span id="zloty"></span>&nbsp;PLN</h3>
-          </li>
+  <li class="list-group-item">
+  <img src="media/watch.svg" alt="clown" height="30" class="mx-2">
+  <span id="nowak"></span>&nbsp;zegarków Nowaka
+  </li>
 
-        </ul>
+    <li class="list-group-item">
+    <img src="media/dinner.svg" alt="clown" height="30" class="mx-2">
+    <span id="dworczyk"></span>&nbsp;obiadów Dworczyka
+    </li>
 
-        <ul class="list-inline justify-content-center d-flex">
-          <li class="list-inline-item">
-            <i class="bi bi-currency-euro"></i></li>
-          <li class="list-inline-item">
-            <h3 class="d-flex justify-content-center py-2"><span id="sasin"></span>&nbsp;$a$inów</h3>
+</ul>
 
-          </li>
-
-        </ul>
 
 
 
       </div>
+
+      <div class="container bg-light">
+
+      <p style="font-size: 0.5em">
+         Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </p>
+      </div>
+
     </div>
 
 
