--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <title>Ile za Turów</title>
   </head>
+
+
   <body>
     <div class="container p-5">
       <div class="container-fluid">
         <h1>Ile za Turów?</h1>
 
-<ul class="list-group list-group-flush fs-5 fw-bolder">
+<ul class="list-group list-group-flush fs-5 fw-bolder py-3">
   <li class="list-group-item">
      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
     <span id="euro"></span> &nbsp;EURO
@@ -47,7 +49,12 @@
 
       </div>
 
-      <div class="container bg-light">
+      <div class="container bg-light pt-2">
+
+      <p>
+         Licznik bije od 16:00 20 września 2021
+      </p>
+
 
       <p style="font-size: 0.5em">
          Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
