--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <ul class="list-group list-group-flush fs-5 fw-bolder py-3">
   <li class="list-group-item">
      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
-    <span id="euro"></span> &nbsp;EURO
+    <span id="euro"></span>&nbsp;EURO
   </li>
   <li class="list-group-item">
     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
@@ -52,7 +52,7 @@
       <div class="container bg-light pt-2">
 
       <p>
-         Licznik bije od 16:00 20 września 2021
+         Licznik bije od 16:00 20 września 2021. Kurs EURO/PLN&nbsp=&nbsp4.60
       </p>
 
 
