--- a/index.html
+++ b/index.html
@@ -40,23 +40,37 @@
   </li>
   <li class="list-group-item">
     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
-    <span id="zloty"></span>&nbsp;PLN
+    <span id="zloty"></span>&nbsp;
+
+<span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="Przy kursie EURO/PLN = 4.60">
+  PLN
+</span>
+
   </li>
 
   <li class="list-group-item">
   <img src="media/clown.svg" alt="clown" height="30" class="mx-2">
-  <span id="sasin"></span>&nbsp;$a$inów
+  <span id="sasin"></span>&nbsp;
+  <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
+    Sa$inów
+  </span>
   </li>
 
   <li class="list-group-item">
   <img src="media/watch.svg" alt="clown" height="30" class="mx-2">
-  <span id="nowak"></span>&nbsp;zegarków Nowaka
+  <span id="nowak"></span>&nbsp;zegarków
+  <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 zegarek Nowaka = 40 000 PLN">
+    Nowaka
+  </span>
   </li>
 
     <li class="list-group-item">
     <img src="media/dinner.svg" alt="clown" height="30" class="mx-2">
-    <span id="dworczyk"></span>&nbsp;obiadów Dworczyka
-    </li>
+    <span id="dworczyk"></span>&nbsp;obiadów
+<span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN">
+  Dworczyka
+</span>
+      </li>
 
 </ul>
 
@@ -68,7 +82,7 @@
       <div class="container bg-light pt-2">
 
       <p>
-         Licznik bije od 16:00 20 września 2021. Kurs EURO/PLN&nbsp=&nbsp4.60
+         Licznik bije od 16:00 20 września 2021.
       </p>
 
 
