--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   gtag('config', 'G-MK2CTPMWTG');
 </script>
 
+<!-- socials -->
 
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/assisfery/SocialShareJS@1.4/social-share.min.css">
+<script src="https://cdn.jsdelivr.net/gh/assisfery/SocialShareJS@1.4/social-share.min.js"></script>
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
     <title>Ile za Turów?</title>
 
@@ -77,6 +80,10 @@
 
 
 
+      </div>
+      <div class="container pt-2">
+        <h6>Podziel się z innymi</h6>
+        <div class="ss-box ss-circle" data-ss-content="false" data-ss-social="share, messenger, facebook, twitter, email"></div>
       </div>
 
       <div class="container bg-light pt-2">
