socials correct, no tooltips

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <script src="https://cdn.jsdelivr.net/gh/assisfery/SocialShareJS@1.4/social-share.min.js"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
+<!-- test js -->
+
+
+
+
     <title>Ile za Turów?</title>
 
 
@@ -43,36 +48,36 @@
   </li>
   <li class="list-group-item">
     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
-    <span id="zloty"></span>&nbsp;
+    <span id="zloty"></span>&nbsp;PLN
 
-<span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="Przy kursie EURO/PLN = 4.60">
+<!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="Przy kursie EURO/PLN = 4.60">
   PLN
-</span>
+</span> -->
 
   </li>
 
   <li class="list-group-item">
   <img src="media/clown.svg" alt="clown" height="30" class="mx-2">
-  <span id="sasin"></span>&nbsp;
-  <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
+  <span id="sasin"></span>&nbsp;Sa$inów
+  <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
     Sa$inów
-  </span>
+  </span> -->
   </li>
 
   <li class="list-group-item">
   <img src="media/watch.svg" alt="clown" height="30" class="mx-2">
-  <span id="nowak"></span>&nbsp;zegarków
-  <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 zegarek Nowaka = 40 000 PLN">
+  <span id="nowak"></span>&nbsp;zegarków Nowaka
+  <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 zegarek Nowaka = 40 000 PLN">
     Nowaka
-  </span>
+  </span> -->
   </li>
 
     <li class="list-group-item">
     <img src="media/dinner.svg" alt="clown" height="30" class="mx-2">
-    <span id="dworczyk"></span>&nbsp;obiadów
-<span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN">
+    <span id="dworczyk"></span>&nbsp;obiadów Dworczyka
+<!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
   Dworczyka
-</span>
+</span> -->
       </li>
 
 </ul>
@@ -83,7 +88,7 @@
       </div>
       <div class="container pt-2">
         <h6>Podziel się z innymi</h6>
-        <div class="ss-box ss-circle" data-ss-content="false" data-ss-social="share, messenger, facebook, twitter, email"></div>
+        <div class="ss-box" data-ss-social="share, messenger, facebook, twitter, email"></div>
       </div>
 
       <div class="container bg-light pt-2">
