--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="media/icon.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -86,7 +87,7 @@
 
 
       </div>
-      <div class="container pt-2">
+      <div class="container py-2">
         <h6>Podziel się z innymi</h6>
         <div class="ss-box" data-ss-social="share, messenger, facebook, twitter, email"></div>
       </div>
@@ -94,7 +95,7 @@
       <div class="container bg-light pt-2">
 
       <p>
-         Licznik bije od 16:00 20 września 2021.
+         Licznik bije od 16:00 20 września 2021. Propozycje innych walut można słać na <a href = "mailto: turow.ileza@gmail.com">turow.ileza@gmail.com</a>
       </p>
 
 
