--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="container p-5">
       <div class="container-fluid">
         <h1>Ile za Turów?</h1>
+        <p>Po kilku miesiącach ciężkiej walki w pocie czoła polskiej dyplomacji oraz rządu P** udało się osiągnąc sukces w sprawie zażegnania kryzysu związanego z kopalnią w Turowie. W dniu 20 września 2021 Trybunał Sprawiedliwości Uni Europejskiej nałożył na Polskę karę w wysokości 500 000 EURO dziennie, a rząd P** otrzymał postanowienie tego wyroku około godziny 16. Od tego czasu bije nasz licznik ilustrujący ile to wszystko będzie nas kosztować.</p>
 
 <ul class="list-group list-group-flush fs-5 fw-bolder py-3">
   <li class="list-group-item">
@@ -58,7 +59,7 @@
   </li>
 
   <li class="list-group-item">
-  <img src="media/clown.svg" alt="clown" height="30" class="mx-2">
+  <img src="media/clown.svg" alt="Sasin" height="30" class="mx-2">
   <span id="sasin"></span>&nbsp;Sa$inów
   <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
     Sa$inów
@@ -66,7 +67,7 @@
   </li>
 
   <li class="list-group-item">
-  <img src="media/watch.svg" alt="clown" height="30" class="mx-2">
+  <img src="media/watch.svg" alt="Zegarek Nowaka" height="30" class="mx-2">
   <span id="nowak"></span>&nbsp;zegarków Nowaka
   <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 zegarek Nowaka = 40 000 PLN">
     Nowaka
@@ -74,12 +75,28 @@
   </li>
 
     <li class="list-group-item">
-    <img src="media/dinner.svg" alt="clown" height="30" class="mx-2">
+    <img src="media/dinner.svg" alt="Obiad Dworczyka" height="30" class="mx-2">
     <span id="dworczyk"></span>&nbsp;obiadów Dworczyka
 <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
   Dworczyka
 </span> -->
       </li>
+
+  <li class="list-group-item">
+  <img src="media/500.svg" alt="500 plus" height="30" class="mx-2">
+  <span id="piecsetplus"></span>&nbsp;wypłat "500+"
+<!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
+Dworczyka
+</span> -->
+    </li>
+
+      <li class="list-group-item">
+      <img src="media/respirator.svg" alt="Respirator od handlarza bronią" height="30" class="mx-2">
+      <span id="respiratory"></span>&nbsp;respiratorów od handlarza bronią
+    <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
+    Dworczyka
+    </span> -->
+        </li>
 
 </ul>
 
@@ -92,14 +109,14 @@
         <div class="ss-box" data-ss-social="share, messenger, facebook, twitter, email"></div>
       </div>
 
-      <div class="container bg-light pt-2">
+      <div class="container bg-light pt-2" style="font-size: 0.5em">
 
       <p>
-         Licznik bije od 16:00 20 września 2021. Propozycje innych walut można słać na <a href = "mailto: turow.ileza@gmail.com">turow.ileza@gmail.com</a>
+         Propozycje innych walut można słać na <a href = "mailto: turow.ileza@gmail.com">turow.ileza@gmail.com</a>
       </p>
 
 
-      <p style="font-size: 0.5em">
+      <p>
          Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
       </p>
       </div>
