--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
         <p>Po kilku miesiącach ciężkiej walki w pocie czoła polskiej dyplomacji oraz rządu P** udało się osiągnąc sukces w sprawie zażegnania kryzysu związanego z kopalnią w Turowie. W dniu 20 września 2021 Trybunał Sprawiedliwości Uni Europejskiej nałożył na Polskę karę w wysokości 500 000 EURO dziennie, a rząd P** otrzymał postanowienie tego wyroku około godziny 16. Od tego czasu bije nasz licznik ilustrujący ile to wszystko będzie nas kosztować.</p>
 
 <ul class="list-group list-group-flush fs-5 fw-bolder py-3">
-  <li class="list-group-item">
+  <li class="list-group-item d-flex justify-content-center">
      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
     <span id="euro"></span>&nbsp;EURO
   </li>
-  <li class="list-group-item">
+
+
+  <li class="list-group-item d-flex justify-content-center">
     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
     <span id="zloty"></span>&nbsp;PLN
 
@@ -58,7 +60,7 @@
 
   </li>
 
-  <li class="list-group-item">
+  <li class="list-group-item d-flex justify-content-center">
   <img src="media/clown.svg" alt="Sasin" height="30" class="mx-2">
   <span id="sasin"></span>&nbsp;Sa$inów
   <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
@@ -66,7 +68,7 @@
   </span> -->
   </li>
 
-  <li class="list-group-item">
+  <li class="list-group-item d-flex justify-content-center">
   <img src="media/watch.svg" alt="Zegarek Nowaka" height="30" class="mx-2">
   <span id="nowak"></span>&nbsp;zegarków Nowaka
   <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 zegarek Nowaka = 40 000 PLN">
@@ -74,7 +76,7 @@
   </span> -->
   </li>
 
-    <li class="list-group-item">
+    <li class="list-group-item d-flex justify-content-center text-nowrap">
     <img src="media/dinner.svg" alt="Obiad Dworczyka" height="30" class="mx-2">
     <span id="dworczyk"></span>&nbsp;obiadów Dworczyka
 <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
@@ -82,7 +84,7 @@
 </span> -->
       </li>
 
-  <li class="list-group-item">
+  <li class="list-group-item d-flex justify-content-center">
   <img src="media/500.svg" alt="500 plus" height="30" class="mx-2">
   <span id="piecsetplus"></span>&nbsp;wypłat "500+"
 <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
@@ -90,7 +92,7 @@ Dworczyka
 </span> -->
     </li>
 
-      <li class="list-group-item">
+      <li class="list-group-item d-flex text-nowrap justify-content-center">
       <img src="media/respirator.svg" alt="Respirator od handlarza bronią" height="30" class="mx-2">
       <span id="respiratory"></span>&nbsp;respiratorów od handlarza bronią
     <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
