--- a/index.html
+++ b/index.html
@@ -95,10 +95,25 @@ Dworczyka
       <li class="list-group-item d-flex text-nowrap justify-content-center">
       <img src="media/respirator.svg" alt="Respirator od handlarza bronią" height="30" class="mx-2">
       <span id="respiratory"></span>&nbsp;respiratorów od handlarza bronią
-    <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
-    Dworczyka
-    </span> -->
+
         </li>
+
+          <li class="list-group-item pt-4">
+            <h3>Przeciętnych wynagrodzeń (netto):</h3>
+          </li>
+
+  <li class="list-group-item d-flex text-nowrap justify-content-center">
+    <img src="media/ratownik.svg" alt="Ratownik medyczny" height="30" class="mx-2">
+  <span id="ratownik"></span>&nbsp;ratowników medycznych
+
+    </li>
+
+  <li class="list-group-item d-flex text-nowrap justify-content-center">
+    <img src="media/pielegniarka.svg" alt="Pielęgniarka" height="30" class="mx-2">
+  <span id="pielegniarka"></span>&nbsp;pielęgniarek
+  
+
+    </li>
 
 </ul>
 
