--- a/index.html
+++ b/index.html
@@ -111,9 +111,16 @@ Dworczyka
   <li class="list-group-item d-flex text-nowrap justify-content-center">
     <img src="media/pielegniarka.svg" alt="Pielęgniarka" height="30" class="mx-2">
   <span id="pielegniarka"></span>&nbsp;pielęgniarek
-  
+
 
     </li>
+
+      <li class="list-group-item d-flex text-nowrap justify-content-center">
+        <img src="media/nauczyciel.svg" alt="Pielęgniarka" height="30" class="mx-2">
+      <span id="nauczyciel"></span>&nbsp;nauczycieli stażystów
+
+
+        </li>
 
 </ul>
 
