--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@ Dworczyka
 
         </li>
 
+
+<li class="list-group-item d-flex text-nowrap justify-content-center">
+<img src="media/angel.svg" alt="Aniołki Glapińskiego" height="30" class="mx-2">
+<span id="aniolki"></span>&nbsp;pensji aniołków Glapińskiego
+
+  </li>
+
+
           <li class="list-group-item pt-4">
             <h3>Przeciętnych wynagrodzeń (netto):</h3>
           </li>
