--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
 </span> -->
       </li>
 
+
+<li class="list-group-item d-flex justify-content-center text-nowrap">
+<img src="media/osmiorniczka.svg" alt="Osmiorniczka" height="30" class="mx-2">
+<span id="osmiorniczka"></span>&nbsp;kg ośmiorniczek
+<!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
+Dworczyka
+</span> -->
+  </li>
+
   <li class="list-group-item d-flex justify-content-center">
   <img src="media/500.svg" alt="500 plus" height="30" class="mx-2">
   <span id="piecsetplus"></span>&nbsp;wypłat "500+"
@@ -138,6 +147,13 @@ Dworczyka
 <span id="aniolki"></span>&nbsp;pensji aniołków Glapińskiego
 
   </li>
+
+
+  <li class="list-group-item d-flex text-nowrap justify-content-center">
+  <img src="media/tv.svg" alt="Aniołki Glapińskiego" height="30" class="mx-2">
+  <span id="tvp"></span>&nbsp;dofinansowań TVPIS
+
+    </li>
 
 
           <li class="list-group-item pt-4">
