--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Dworczyka
 
 
   <li class="list-group-item d-flex text-nowrap justify-content-center">
-  <img src="media/tv.svg" alt="Aniołki Glapińskiego" height="30" class="mx-2">
+  <img src="media/tv.svg" alt="TVPIS" height="30" class="mx-2">
   <span id="tvp"></span>&nbsp;dofinansowań TVPIS
 
     </li>
