--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@ Dworczyka
 
     </li>
 
+<li class="list-group-item d-flex text-nowrap justify-content-center">
+<img src="media/thief.svg" alt="Caritas" height="30" class="mx-2">
+<span id="caritas"></span>&nbsp;sumy wyłudzonej przez płocki Caritas
+<!-- https://oko.press/piotr-libera-unijne-dotacje-pfron-caritas-19-mln-zl/ -->
+  </li>
+
+
 
           <li class="list-group-item pt-4">
             <h3>Przeciętnych wynagrodzeń (netto):</h3>
