--- a/index.html
+++ b/index.html
@@ -96,11 +96,20 @@
 
   <li class="list-group-item d-flex justify-content-center">
   <img src="media/clown.svg" alt="Sasin" height="30" class="mx-2">
-  <span id="sasin"></span>&nbsp;Sa$inów
+  <span id="sasin"></span>&nbsp;Sa$ina
   <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
     Sa$inów
   </span> -->
   </li>
+
+
+    <li class="list-group-item d-flex justify-content-center">
+    <img src="media/zero.svg" alt="Ziobro" height="30" class="mx-2">
+    <span id="ziobro"></span>&nbsp;Zi0bry
+    <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 Sa$in = 70 000  000 PLN">
+      Sa$inów
+    </span> -->
+    </li>
 
   <li class="list-group-item d-flex justify-content-center">
   <img src="media/watch.svg" alt="Zegarek Nowaka" height="30" class="mx-2">
