--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </span> -->
         </li>
 
-        <li class="list-group-item d-flex justify-content-center">
+        <li class="list-group-item d-flex text-nowrap justify-content-center">
         <img src="media/500.svg" alt="500 plus" height="30" class="mx-2">
         <span id="piecsetplus"></span>&nbsp;wypłat "500+"
       <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
@@ -197,6 +197,16 @@
             <li class="list-group-item d-flex text-nowrap justify-content-center">
               <img src="media/nauczyciel.svg" alt="Pielęgniarka" height="30" class="mx-2">
             <span id="nauczyciel"></span>&nbsp;nauczycieli stażystów
+
+
+              </li>
+
+            <li class="list-group-item d-flex text-nowrap justify-content-center">
+              <img src="media/emeryt.svg" alt="Emeryt" height="30" class="mx-2">
+            <span id="emeryt"></span>&nbsp;emerytów
+
+
+          <!-- https://stat.gov.pl/obszary-tematyczne/warunki-zycia/dochody-wydatki-i-warunki-zycia-ludnosci/emerytury-i-renty-w-2019-r-,32,11.html -->
 
 
               </li>
