--- a/index.html
+++ b/index.html
@@ -144,10 +144,20 @@
         <li class="list-group-item d-flex text-nowrap justify-content-center">
         <img src="media/500.svg" alt="500 plus" height="30" class="mx-2">
         <span id="piecsetplus"></span>&nbsp;wypłat "500+"
-      <!-- <span class="text-decoration-underline" data-bs-toggle="tooltip" data-bs-placement="top" title="1 obiad Dworczyka = 4 320 PLN" trigger="click">
-      Dworczyka
-      </span> -->
+
           </li>
+
+    <li class="list-group-item d-flex text-nowrap justify-content-center">
+    <img src="media/baby-boy.png" alt="Dziecko" height="30" class="mx-2">
+    <span id="dodatekRodzic"></span>&nbsp;dodatków dla samotnych rodziców
+
+      </li>
+
+    <li class="list-group-item d-flex text-nowrap justify-content-center">
+    <img src="media/disabled-people.png" alt="Niepełnosprawny" height="30" class="mx-2">
+    <span id="zasilekPielegnacyjny"></span>&nbsp;zasiłków pielęgnacyjnych
+<!-- https://www.pit.pl/zasilki/ -->
+      </li>
 
             <li class="list-group-item d-flex text-nowrap justify-content-center">
             <img src="media/respirator.svg" alt="Respirator od handlarza bronią" height="30" class="mx-2">
@@ -165,7 +175,7 @@
 
         <li class="list-group-item d-flex text-nowrap justify-content-center">
         <img src="media/tv.svg" alt="TVPIS" height="30" class="mx-2">
-        <span id="tvp"></span>&nbsp;dofinansowań TVPIS
+        <span id="tvp"></span>&nbsp;rocznych dofinansowań TVPIS
 
           </li>
 
