--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
               <p>Po kilku miesiącach ciężkiej walki w pocie czoła polskiej dyplomacji oraz rządu P** udało się osiągnąc sukces w sprawie zażegnania kryzysu związanego z kopalnią w Turowie. W dniu 20 września 2021 Trybunał Sprawiedliwości Uni Europejskiej nałożył na Polskę karę w wysokości 500 000 EURO dziennie, a rząd P** otrzymał postanowienie tego wyroku około godziny 16. Od tego czasu bije nasz licznik ilustrujący ile to wszystko będzie nas kosztować.
               </p>
 
+<div class="row justify-content-md-center">
+  <div class="col-12 col-md-8 col-lg-9">
+
 
 <div class="accordion accordion-flush" id="accordionIleZaTurow">
   <div class="accordion-item">
@@ -507,7 +510,9 @@
 
 </div>
 
+  </div>
 
+</div>
 
 <div class="container pt-3">
   <h5>Podziel się z innymi</h5>
