--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
   text-decoration: none;
 }
 
+.accordion-button {
+    padding: 0.8rem 1.25rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
 </style>
 
 
