--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
           <div class="container-xl p-5">
 
             <div class="container-fluid">
-              <h1>Ile za Turów?</h1>
+
               <p>Po kilku miesiącach ciężkiej walki w pocie czoła polskiej dyplomacji oraz rządu P** udało się osiągnąc sukces w sprawie zażegnania kryzysu związanego z kopalnią w Turowie. W dniu 20 września 2021 Trybunał Sprawiedliwości Uni Europejskiej nałożył na Polskę karę w wysokości 500 000 EURO dziennie, a rząd P** otrzymał postanowienie tego wyroku około godziny 16. Od tego czasu bije nasz licznik ilustrujący ile to wszystko będzie nas kosztować.
               </p>
-
+  <h1>Ile za Turów?</h1>
 <div class="row justify-content-md-center">
   <div class="col-12 col-md-8 col-lg-9">
 
@@ -133,7 +133,7 @@
     <div id="flush-collapseSasin" class="accordion-collapse collapse" aria-labelledby="flush-headingSasin" data-bs-parent="#accordionIleZaTurow">
       <div class="accordion-body">
         <p>
-        Tuza p**owskiej polity Jacek Sasin był odpowiedzialny za organizajcę tzw. wyborów kopertowych w maju 2020 roku. Całość przedsięwzięcia została podsumowana przez Pocztę Polską na kwotę 68 mln 896 tys. 820zł, a ostatecznie wybory i tak się <span class="text-decoration-underline">nie odbyły</span>.
+        Tuza p**owskiej polityki Jacek Sasin był odpowiedzialny za organizajcę tzw. wyborów kopertowych w maju 2020 roku. Całość przedsięwzięcia została podsumowana przez Pocztę Polską na kwotę 68 mln 896 tys. 820zł, a ostatecznie wybory i tak się <span class="text-decoration-underline">nie odbyły</span>.
         </p>
 
       <a class="d-flex justify-content-end" href="https://wiadomosci.onet.pl/kraj/jacek-sasin-o-70-mln-zl-na-wybory-kopertowe-demokracja-kosztuje/b8bx4kd">
