--- a/index.html
+++ b/index.html
@@ -120,9 +120,22 @@
       </button>
     </h2>
     <div id="flush-collapseZloty" class="accordion-collapse collapse" aria-labelledby="flush-headingZloty" data-bs-parent="#accordionIleZaTurow">
-      <div class="accordion-body">Przeliczamy po kursie EURO/PLN = 4.60 </div>
+      <div class="accordion-body">Przeliczamy po kursie EURO/PLN = 4,60 </div>
     </div>
   </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingKorona">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseKorona" aria-expanded="false" aria-controls="flush-collapseKorona">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Flag_of_the_Czech_Republic.svg" alt="Flaga Czech" height="30" class="mx-2">
+            <span id="korona"></span>&nbsp;CZK
+      </button>
+    </h2>
+    <div id="flush-collapseKorona" class="accordion-collapse collapse" aria-labelledby="flush-headingZloty" data-bs-parent="#accordionIleZaTurow">
+      <div class="accordion-body">Przeliczamy po kursie EURO/CZK = 25,73 </div>
+    </div>
+  </div>
+
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingSasin">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSasin" aria-expanded="false" aria-controls="flush-collapseSasin">
