Kara za izbe dyscylinarna

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 
-    <title>Ile za Turów? - Licznik wysokości kary</title>
+    <title>Ile za PIS - licznik kosztów</title>
 
 
   </head>
@@ -86,22 +86,28 @@
 
             <div class="container-fluid">
 
+              <h1>Ile zapłacimy za PIS?</h1>
+
+
               <p>Po kilku miesiącach ciężkiej walki w pocie czoła polskiej dyplomacji oraz rządu P** udało się osiągnąc sukces w sprawie zażegnania kryzysu związanego z kopalnią w Turowie. W dniu 20 września 2021 Trybunał Sprawiedliwości Uni Europejskiej nałożył na Polskę karę w wysokości 500 000 EURO dziennie, a rząd P** otrzymał postanowienie tego wyroku około godziny 16. Od tego czasu bije nasz licznik ilustrujący ile to wszystko będzie nas kosztować.
               </p>
-  <h1>Ile za Turów?</h1>
+
+                <p>Następnie, 27 października 2021 TSUE przypuściła kolejny, zupełnie niespodziewany atak na rząd P**. W związku z niezaprzestaniem funkcjonowania nielegalnje izby dyscyplinarnej w sądzie najwyższym wlepiła karę wysokości 1&nbsp;000&nbsp;000 EURO dziennie. Podobnie jak w przypadku Turowa nasz licznik bije od godziny 16 i dnia decyzji TSUE.
+                </p>
+  <h2>Ile za Turów?</h2>
 <div class="row justify-content-md-center">
   <div class="col-12 col-md-8 col-lg-9">
 
 
 <div class="accordion accordion-flush" id="accordionIleZaTurow">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="flush-headingEuro">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEuro" aria-expanded="false" aria-controls="flush-collapseEuro">
+    <h2 class="accordion-header" id="flush-headingEuroTurow">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEuroTurow" aria-expanded="false" aria-controls="flush-collapseEuroTurow">
            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
-          <span id="euro"></span>&nbsp;EURO
+          <span id="euro_turow"></span>&nbsp;EURO
       </button>
     </h2>
-    <div id="flush-collapseEuro" class="accordion-collapse collapse" aria-labelledby="flush-headingEuro" data-bs-parent="#accordionIleZaTurow">
+    <div id="flush-collapseEuroTurow" class="accordion-collapse collapse" aria-labelledby="flush-headingEuroTurow" data-bs-parent="#accordionIleZaTurow">
       <div class="accordion-body">
         <p>W związku z niezaprzestaniem wydobycia węgla w kopalni Turów, a wiec niezastosowaniem się do środka tymczasowego zarządzonogo 21 maja 2021 przez TSUE, Trybunał zobowiązał Polskę do zapłaty 500tyś euro dziennie na rzecz Komisji Europejskiej.
       </p>
@@ -113,13 +119,13 @@
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="flush-headingZloty">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseZloty" aria-expanded="false" aria-controls="flush-collapseZloty">
+    <h2 class="accordion-header" id="flush-headingZlotyTurow">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseZlotyTurow" aria-expanded="false" aria-controls="flush-collapseZlotyTurow">
             <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
-            <span id="zloty"></span>&nbsp;PLN
+            <span id="zloty_turow"></span>&nbsp;PLN
       </button>
     </h2>
-    <div id="flush-collapseZloty" class="accordion-collapse collapse" aria-labelledby="flush-headingZloty" data-bs-parent="#accordionIleZaTurow">
+    <div id="flush-collapseZlotyTurow" class="accordion-collapse collapse" aria-labelledby="flush-headingZlotyTurow" data-bs-parent="#accordionIleZaTurow">
       <div class="accordion-body">Przeliczamy po kursie EURO/PLN = 4,60 </div>
     </div>
   </div>
@@ -131,10 +137,99 @@
             <span id="korona"></span>&nbsp;CZK
       </button>
     </h2>
-    <div id="flush-collapseKorona" class="accordion-collapse collapse" aria-labelledby="flush-headingZloty" data-bs-parent="#accordionIleZaTurow">
+    <div id="flush-collapseKorona" class="accordion-collapse collapse" aria-labelledby="flush-headingKorona" data-bs-parent="#accordionIleZaTurow">
       <div class="accordion-body">Przeliczamy po kursie EURO/CZK = 25,73 </div>
     </div>
   </div>
+</div>
+
+
+
+
+
+
+  <h2 class="pt-4">Ile za nielegalną izbę dyscyplinarną?</h2>
+<div class="row justify-content-md-center">
+  <div class="col-12 col-md-8 col-lg-9">
+
+
+<div class="accordion accordion-flush" id="accordionIleZaIzbe">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingEuroIzba">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEuroIzba" aria-expanded="false" aria-controls="flush-collapseEuroIzba">
+           <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
+          <span id="euro_izba"></span>&nbsp;EURO
+      </button>
+    </h2>
+    <div id="flush-collapseEuroIzba" class="accordion-collapse collapse" aria-labelledby="flush-headingEuroIzba" data-bs-parent="#accordionIleZaIzbe">
+      <div class="accordion-body">
+        <p>W związku z niezaprzestaniem wydobycia węgla w kopalni Turów, a wiec niezastosowaniem się do środka tymczasowego zarządzonogo 21 maja 2021 przez TSUE, Trybunał zobowiązał Polskę do zapłaty 500tyś euro dziennie na rzecz Komisji Europejskiej.
+      </p>
+
+      <a class="d-flex justify-content-end" href="https://businessinsider.com.pl/wiadomosci/tsue-kara-dla-polski-za-kopalnie-turow-pol-miliona-euro-dziennie/h3mhxc2">
+        <button type="button" class="btn btn-link">źródło</button></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingZlotyIzba">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseZlotyIzba" aria-expanded="false" aria-controls="flush-collapseZlotyIzba">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
+            <span id="zloty_izba"></span>&nbsp;PLN
+      </button>
+    </h2>
+    <div id="flush-collapseZlotyIzba" class="accordion-collapse collapse" aria-labelledby="flush-headingZlotyIzba" data-bs-parent="#accordionIleZaIzbe">
+      <div class="accordion-body">Przeliczamy po kursie EURO/PLN = 4,60 </div>
+    </div>
+  </div>
+</div>
+
+
+
+<h2 class="pt-4">Ile w sumie za PIS?</h2>
+
+<div class="accordion accordion-flush" id="accordionIleZaPIS">
+
+<div class="accordion-item">
+  <h2 class="accordion-header" id="flush-headingEuro">
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEuro" aria-expanded="false" aria-controls="flush-collapseEuro">
+
+   <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Flag_of_Europe.svg" alt="EU flag" height="30" class="mx-2">
+  <span id="euro"></span>&nbsp;EURO
+
+    </button>
+  </h2>
+  <div id="flush-collapseEuro" class="accordion-collapse collapse" aria-labelledby="flush-headingEuro" data-bs-parent="#accordionIleZaPIS">
+    <div class="accordion-body">
+      <!-- accordion body -->
+    <br>
+
+    <a class="d-flex justify-content-end" href="#">
+      <button type="button" class="btn btn-link">źródło</button></a>
+    </div>
+  </div>
+</div>
+
+<div class="accordion-item">
+  <h2 class="accordion-header" id="flush-headingZloty">
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseZloty" aria-expanded="false" aria-controls="flush-collapseZloty">
+
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/Flag_of_Poland_%28normative%29.svg" alt="Poland flag" height="30" class="mx-2">
+            <span id="zloty"></span>&nbsp;PLN
+
+    </button>
+  </h2>
+  <div id="flush-collapseZloty" class="accordion-collapse collapse" aria-labelledby="flush-headingZloty" data-bs-parent="#accordionIleZaPIS">
+    <div class="accordion-body">
+      <!-- accordion body -->
+    <br>
+
+    <a class="d-flex justify-content-end" href="#">
+      <button type="button" class="btn btn-link">źródło</button></a>
+    </div>
+  </div>
+</div>
 
   <div class="accordion-item">
     <h2 class="accordion-header" id="flush-headingSasin">
