--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <p>Po kilku miesiącach ciężkiej walki w pocie czoła polskiej dyplomacji oraz rządu P** udało się osiągnąc sukces w sprawie zażegnania kryzysu związanego z kopalnią w Turowie. W dniu 20 września 2021 Trybunał Sprawiedliwości Uni Europejskiej nałożył na Polskę karę w wysokości 500 000 EURO dziennie, a rząd P** otrzymał postanowienie tego wyroku około godziny 16. Od tego czasu bije nasz licznik ilustrujący ile to wszystko będzie nas kosztować.
               </p>
 
-                <p>Następnie, 27 października 2021 TSUE przypuściła kolejny, zupełnie niespodziewany atak na rząd P**. W związku z niezaprzestaniem funkcjonowania nielegalnje izby dyscyplinarnej w sądzie najwyższym wlepiła karę wysokości 1&nbsp;000&nbsp;000 EURO dziennie. Podobnie jak w przypadku Turowa nasz licznik bije od godziny 16 i dnia decyzji TSUE.
+                <p>Następnie, 27 października 2021 TSUE przypuściła kolejny, zupełnie niespodziewany atak na rząd P**. W związku z niezaprzestaniem funkcjonowania nielegalnje izby dyscyplinarnej w sądzie najwyższym wlepiła karę wysokości 1&nbsp;000&nbsp;000 EURO dziennie. Rząd P** był tak odważny, że decyzji nie odebrał przez tydzień i jak podaje <a href="https://www.rmf24.pl/raporty/raport-batalia-o-sady/fakty/news-milion-euro-dziennie-polska-celowo-nie-odbiera-postanowienia,nId,5610258#crp_state=1" target="_blank">RMF FM</a>, naliczanie kary rozpoczęło się dopiero 3 listopada.
                 </p>
 
 <div class="row justify-content-md-center">
@@ -643,7 +643,7 @@
 
     <div class="col-md-6 text-center">
       <h6>O nas</h6>
-    <p style="font-size: 0.6em;">Na pamiątkę sukcesów p**owskiej dyplomacji liczymy wysokość możliwą wysokość kary zasądzonej przez TSUE za niezaprzestanie wydobycia węgla w kopalni Turów.</p>
+    <p style="font-size: 0.6em;">Na pamiątkę sukcesów p**owskiej dyplomacji liczymy możliwą wysokość kary zasądzonej przez TSUE za niezaprzestanie wydobycia węgla w kopalni Turów.</p>
   <p style="font-size: 0.6em;">
      Propozycje innych walut można słać na <a href = "mailto: turow.ileza@gmail.com">turow.ileza@gmail.com</a>
   </p>
