Zatrzymanie licznika dla Turowa

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                 <p>Następnie, 27 października 2021 TSUE przypuściła kolejny, zupełnie niespodziewany atak na rząd P**. W związku z niezaprzestaniem funkcjonowania nielegalnje izby dyscyplinarnej w sądzie najwyższym wlepiła karę wysokości 1&nbsp;000&nbsp;000 EURO dziennie. Rząd P** był tak odważny, że decyzji nie odebrał przez tydzień i jak podaje <a href="https://www.rmf24.pl/raporty/raport-batalia-o-sady/fakty/news-milion-euro-dziennie-polska-celowo-nie-odbiera-postanowienia,nId,5610258#crp_state=1" target="_blank">RMF FM</a>, naliczanie kary rozpoczęło się dopiero 3 listopada.
                 </p>
 
+                <p class="fst-italic">Przyznajemy się, że trochę zaniedbaliśmy naszą stronę i nie dokonaliśmy najważniejszej aktualizacji. W związku z dużym zainteresowaniem w ostatnim czasie (serdeczne dzięki <a href="https://www.instagram.com/make_life_harder/">make_life_harder</a>), zatrymaliśmy licznik dla Turowa z kwotą jaką uzbierała się do 4 lutego 2022. Reszta kręci się dalej.
+                </p>
+
 <div class="row justify-content-md-center">
   <div class="col-12 col-md-8 col-lg-9">
 
@@ -114,6 +117,13 @@
 
       <a class="d-flex justify-content-end" href="https://businessinsider.com.pl/wiadomosci/tsue-kara-dla-polski-za-kopalnie-turow-pol-miliona-euro-dziennie/h3mhxc2">
         <button type="button" class="btn btn-link">źródło</button></a>
+
+      <p>Spór zakończył się 4 lutego 2022, zgodnie z postanowieniem TSUE. Od tego dnia licznik za Turów został zatrzymany
+    </p>
+
+    <a class="d-flex justify-content-end" href="https://www.prawo.pl/prawo/kara-za-turow-ke-zacznie-potracac-z-funduszy,512935.html">
+      <button type="button" class="btn btn-link">źródło</button></a>
+
       </div>
     </div>
   </div>
