--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   </h2>
   <div id="flush-collapseDworczyk" class="accordion-collapse collapse" aria-labelledby="flush-headingDworczyk" data-bs-parent="#accordionIleZaTurow">
     <div class="accordion-body">
-      <p> Za sprawą tzw. afery mailowej, czyli ciągłego wycieku korespondencji z prywatnej skrzynki pocztowej ministra Dworczyka, którą wykorzystywał do służobych celów, dowiedzieliśmy się o jego kolacji za 4320zł w hotelu Maria.
+      <p> Za sprawą tzw. afery mailowej, czyli ciągłego wycieku korespondencji z prywatnej skrzynki pocztowej ministra Dworczyka, którą wykorzystywał do służbowych celów, dowiedzieliśmy się o jego kolacji za 4320zł w hotelu Maria.
       </p>
 
     <a class="d-flex justify-content-end" href="https://www.rmf24.pl/raporty/raport-afera-mailowa/news-kolacja-dworczyka-za-4-tys-zl-dzialacze-pis-duze-spotkanie-w,nId,5506366#crp_state=1">
@@ -355,7 +355,7 @@
       <p>
       W 2014 roku, za sprawą
       <a href="https://pl.wikipedia.org/wiki/Afera_pods%C5%82uchowa_w_Polsce">afery podsłuchowej </a>
-      cała Polska dowiedziała się co w prywatnych rozmowach w restauracji Sowa i Przyjaciele mówią prominentni politycy PO, przedsiębiorcy oraz prezezi NBP i NIK. Poza samą treścią rozmów, Polaków oburzył fakt iż. politycy płacili za posiłki ze służbowych pieniędzy. Jednymi z najbardziej wytykanych dań były OŚMIORNICZKI.
+      cała Polska dowiedziała się co w prywatnych rozmowach w restauracji Sowa i Przyjaciele mówią prominentni politycy PO, przedsiębiorcy oraz prezezi NBP i NIK. Poza samą treścią rozmów, Polaków oburzył fakt iż, politycy płacili za posiłki ze służbowych pieniędzy. Jednymi z najbardziej wytykanych dań były OŚMIORNICZKI.
     </p>
       Cena ośmiorniczek (surowych) to 50zł / kg.
     <br>
@@ -449,7 +449,7 @@
   <div id="flush-collapseRespiratory" class="accordion-collapse collapse" aria-labelledby="flush-headingRespiratory" data-bs-parent="#accordionIleZaTurow">
     <div class="accordion-body">
 
-    <p>W 2020 roku Ministerstwo Zdrowia zdecydowało się na zakup 2,2tys. respiratorów od handlarza bronią za kwotę 370mln zł (czyli średnio <span class="fw-bold">168 181zł</span> za sztukę). Respiratory nie nadawały się do użytku i nawet nie zostały dostarczone w wymaganej ilości. Ponadto ich cena kilkukrotnie odiegała od ceny respiratorów dostępnych na rynku.
+    <p>W 2020 roku Ministerstwo Zdrowia zdecydowało się na zakup 2,2tys. respiratorów od handlarza bronią za kwotę 370mln zł (czyli średnio <span class="fw-bold">168 181zł</span> za sztukę). Respiratory nie nadawały się do użytku i nawet nie zostały dostarczone w wymaganej ilości. Ponadto ich cena kilkukrotnie odbiegała od ceny respiratorów dostępnych na rynku.
     </p>
 
 <div class="d-flex justify-content-end">
@@ -477,7 +477,7 @@
   <div id="flush-collapseAniolki" class="accordion-collapse collapse" aria-labelledby="flush-headingAniolki" data-bs-parent="#accordionIleZaTurow">
     <div class="accordion-body">
     <p>
-      Pod koniec 2018 roku do opini publicznej zaczęły trafiać informacje o kosmicznych kwotach zarabianych przez dwie najbliższe współpracowniczki (o wątpliwych kompetencjach) prezesa NBP Adama Glapińskiego. Ostatecznie na jaw wyszło iż zarabiały średnio <span class="fw-bold">46 161.5zł</span>
+      Pod koniec 2018 roku do opinii publicznej zaczęły trafiać informacje o kosmicznych kwotach zarabianych przez dwie najbliższe współpracowniczki (o wątpliwych kompetencjach) prezesa NBP Adama Glapińskiego. Ostatecznie na jaw wyszło iż zarabiały średnio <span class="fw-bold">46 161.50zł</span>
     </p>
 
 
@@ -550,7 +550,7 @@
   <div id="flush-collapseRatownik" class="accordion-collapse collapse" aria-labelledby="flush-headingRatownik" data-bs-parent="#accordionIleZaTurow2">
     <div class="accordion-body">
       <p>
-        Mediana zarobków ratown medycznych to 2844 zł
+        Mediana zarobków ratowników medycznych to 2844 zł
       </p>
 
 
@@ -573,7 +573,7 @@
   <div id="flush-collapsePielegniarki" class="accordion-collapse collapse" aria-labelledby="flush-headingPielegniarki" data-bs-parent="#accordionIleZaTurow2">
     <div class="accordion-body">
       <p>
-        Mediana zarobków ratown medycznych to 3141 zł
+        Mediana zarobków pielęgniarek to 3141 zł
       </p>
 
 
